--- a/Proyecto_R/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto_R/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="230dp"
+        android:layout_height="43dp"
         android:text="Prueba de reproduccion de audio."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.375" />
+
+    <TableRow
+        android:layout_width="290dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="68dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="80dp"
+            app:icon="@android:drawable/ic_media_previous" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="68dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="80dp"
+            app:icon="@android:drawable/ic_media_pause" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="68dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="80dp"
+            app:icon="@android:drawable/ic_media_play" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="68dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            app:icon="@android:drawable/ic_media_next" />
+    </TableRow>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
